--- a/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.scss
+++ b/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.scss
@@ -1,11 +1,28 @@
-.small-input {
-  width: 700px;
+@import "../../../../../assets/scss/base";
+
+
+:host ::ng-deep {
+  .p-button {
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+
+    &:hover {
+      background-color: $primary-hover;
+      border-color: $primary-hover;
+    }
+  }
+
+  .p-tag {
+    border-radius: 20px;
+  }
 }
 
-.super-small-input{
-  width: 60px;
-
+.p-inputtext {
+  border-radius: 8px;
 }
+
 .loading{
   z-index: 100;
 }
@@ -18,6 +35,130 @@
   align-items: center;
 }
 
-.icon-text {
-  margin-right: 5px; /* Adjust the margin as needed */
+.action-button {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: none;
+  background: $primary;
+
+  i {
+    color: white;
+  }
 }
+
+
+::ng-deep .p-dropdown {
+  width: 100%;
+  border-radius: 8px;
+}
+
+::ng-deep ul {
+  padding: 0;
+  margin-bottom: 0;
+  font-size: 16px;
+}
+
+.table-container {
+  border: 0.8px solid #d2d2d2;
+  border-radius: 8px;
+  background-color: #f8f9fa;
+
+  .advance-search {
+  }
+}
+
+.table-content {
+  margin-bottom: 0;
+
+  .table {
+    margin-bottom: 0;
+
+    thead {
+      font-size: 17px;
+      border-top: 0.8px solid #eef0f3;
+      tr {
+        th {
+          border-bottom: none;
+          background-color: #f8f9fa;
+          font-weight: 600;
+          color: #495057;
+          padding-bottom: 20px !important;
+        }
+      }
+    }
+
+    tr {
+      border: none;
+    }
+
+    td {
+      font-size: 15px;
+      border: none;
+    }
+  }
+}
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+  background-color: #e9ecef;
+}
+
+.table-footer {
+  background-color: white;
+  border-radius: 0 0 8px 8px;
+  select {
+    margin-top: 10px;
+
+    option {
+      font-size: 20px;
+      background-color: white !important;
+
+      :hover {
+        background-color: $primary-hover;
+      }
+    }
+  }
+
+  ::ng-deep .ngx-pagination {
+    width: auto !important;
+    display: flex;
+    font-size: 20px;
+    .small-screen {
+      display: none;
+    }
+    .pagination-previous, .pagination-next {
+      font-size: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    li {
+      margin-right: 5px;
+      margin-left: 5px;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      border-radius: 50%;
+      align-items: center;
+      justify-content: center;
+
+      a {
+        text-decoration: none !important;
+        background: none !important;
+      }
+    }
+
+    .current {
+      background-color: $primary !important;
+      opacity: 0.5;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+
