--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
@@ -28,10 +28,12 @@
       [paginator]="true"
       currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
       [filterDelay]="0"
-      [globalFilterFields]="['name', 'role', 'school']"
+      [globalFilterFields]="['user.fullName ', 'role', 'school']"
     >
       <ng-template pTemplate="caption">
-        <div class="table-header">
+        <div
+          class="table-header d-flex justify-content-between align-items-center"
+        >
           <span class="p-input-icon-left">
             <i class="fa-solid fa-search"></i>
             <input
@@ -41,32 +43,82 @@
               placeholder="Tìm kiếm"
             />
           </span>
+          <div>
+            <button
+              *ngIf="!filterVisible"
+              pButton
+              (click)="changeFilterVisible(true)"
+            >
+              Tra cứu nâng cao
+            </button>
+            <button
+              *ngIf="filterVisible"
+              pButton
+              (click)="changeFilterVisible(false)"
+            >
+              Ẩn tra cứu nâng cao
+            </button>
+          </div>
         </div>
       </ng-template>
       <ng-template pTemplate="header">
+        <tr *ngIf="filterVisible">
+          <th></th>
+          <th></th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="user.fullName"
+              pTooltip="(VD): Nguyễn Văn A"
+              tooltipPosition="top"
+              placeholder="Tên"
+            ></p-columnFilter>
+          </th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="roles[0].roleName"
+              pTooltip="(VD): Hiệu trưởng"
+              tooltipPosition="top"
+              placeholder="Chức vụ"
+            ></p-columnFilter>
+          </th>
+          <th>
+            <p-columnFilter
+              type="text"
+              field="school.schoolName"
+              pTooltip="(VD): Đơn vị"
+              tooltipPosition="top"
+              placeholder="Đơn vị"
+            ></p-columnFilter>
+          </th>
+        </tr>
         <tr>
-          <th style="width: 4rem">
+          <th style="width: 4rem" class="th-id">
             <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
           </th>
           <th class="th-id">
             <div>Id</div>
           </th>
-          <th pSortableColumn="name">
+          <th pSortableColumn="user.fullName">
             <div>
               Tên
-              <p-sortIcon field="name"></p-sortIcon>
+              <p-sortIcon field="user.fullName"></p-sortIcon>
             </div>
           </th>
-          <th pSortableColumn="role">
+          <th
+            pSortField="roles[0].roleName"
+            pSortableColumn="roles[0].roleName"
+          >
             <div>
               Chức vụ
-              <p-sortIcon field="role"></p-sortIcon>
+              <p-sortIcon field="roles[0].roleName"></p-sortIcon>
             </div>
           </th>
-          <th pSortableColumn="school">
+          <th pSortableColumn="school.schoolName">
             <div>
               Tên trường
-              <p-sortIcon field="school"></p-sortIcon>
+              <p-sortIcon field="school.schoolName"></p-sortIcon>
             </div>
           </th>
           <!-- <th class="th-small"></th> -->
@@ -83,11 +135,11 @@
           </td>
           <td>
             <span class="p-column-title">Tên</span>
-            {{ inspector.fullName || inspector.user.fullName }}
+            {{ inspector.user.fullName }}
           </td>
           <td>
             <span class="p-column-title">Chức vụ</span>
-            <!-- {{ inspector.roles[0].roleName }} -->
+            {{ inspector.roles[0].roleName }}
           </td>
           <td>
             <span class="p-column-title">Đơn vị</span>
@@ -97,7 +149,7 @@
       </ng-template>
       <ng-template pTemplate="emptymessage">
         <tr>
-          <td colspan="8">Không tìm thấy người nào</td>
+          <td colspan="5">Không tìm thấy người nào</td>
         </tr>
       </ng-template>
     </p-table>
