--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
@@ -48,6 +48,7 @@
               *ngIf="!filterVisible"
               pButton
               (click)="changeFilterVisible(true)"
+              class="advance-search"
             >
               Tra cứu nâng cao
             </button>
@@ -55,6 +56,7 @@
               *ngIf="filterVisible"
               pButton
               (click)="changeFilterVisible(false)"
+              class="advance-search"
             >
               Ẩn tra cứu nâng cao
             </button>
@@ -63,8 +65,8 @@
       </ng-template>
       <ng-template pTemplate="header">
         <tr *ngIf="filterVisible">
-          <th></th>
-          <th></th>
+          <th class="th-id"></th>
+          <th class="th-id"></th>
           <th>
             <p-columnFilter
               type="text"
